# taska

./: .gitignore  README.md  pyproject.toml
taska/: __init__.py  __main__.py  config.py  core.py  env.py  runner.py
taska/bottle_app/: __main__.py  app.py  console_template.py
taska/templates/: runner.py
